// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[mutagen enumerators config import-export] should create the enumerators: the enumerators have been created 1`] = `
Object {
  "stderr": "",
  "stdout": "+ enumerator => Environment/cfgObjectTest
Completed. 1 object(s) imported.
",
}
`;

exports[`[mutagen enumerators config import-export] should throw exception when new enumerators to import miss mandatory properties enumerators: exception has been thrown 1`] = `
Object {
  "stderr": "Cannot import configuration: some configuration objects' mandatory properties for creation are not set.
	Mandatory properties [displayName, type] not set in enumerator 'Environment/emptyCfgObjectTest'
",
  "stdout": "",
}
`;

exports[`[mutagen enumerators config import-export] should update the enumerators: the enumerators have been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "~ enumerator => Environment/cfgObjectTest
Completed. 1 object(s) imported.
",
}
`;
